src/styles/global.css
/* ... */
.status-item {
    background-color: var(--color-surface-status);
    padding: var(--space-200);
    min-height: 80px;

    .title {
      color: var(--color-text-heading);
      font-size: var(--font-size-subsubheading);
    }

    .title, .label {
        margin-bottom: var(--space-050);
    }
    
    .image {
      width: 48px;
      height: 48px;
    }

    .image-link {
        position: relative;
        width: fit-content;
        height: fit-content;
        padding-right: 4px;
        padding-top: 4px;

        &::after {
            content: '';
            position: absolute;
            top: -4px;
            right: -4px;
            width: 12px;
            height: 12px;
            border-right: 2px solid var(--color-text-link);
            border-top: 2px solid var(--color-text-link);
            transition: var(--transition-medium);
        }
        &:hover::after {
            width: 100%;
            height: 100%;
        }
    }

    &.loading {
      --c: var(--color-surface-status);
      background: repeating-linear-gradient(
        to right,
        transparent 0% 8%,
        color-mix(in srgb, var(--c) 17%, transparent) 8% 16%,
        color-mix(in srgb, var(--c) 33%, transparent) 16% 24%,
        color-mix(in srgb, var(--c) 50%, transparent) 24% 32%,
        color-mix(in srgb, var(--c) 67%, transparent) 32% 40%,
        color-mix(in srgb, var(--c) 83%, transparent) 40% 48%,
        var(--c) 48% 56%,
        color-mix(in srgb, var(--c) 83%, transparent) 56% 64%,
        color-mix(in srgb, var(--c) 67%, transparent) 64% 72%,
        color-mix(in srgb, var(--c) 50%, transparent) 72% 80%,
        color-mix(in srgb, var(--c) 33%, transparent) 80% 88%,
        color-mix(in srgb, var(--c) 17%, transparent) 88% 96%,
        transparent 96% 100%
      );
      background-size: 200% auto;
      background-position: 0 100%;
      animation: loading-gradient 3s infinite linear;
    }
}

@keyframes loading-gradient { 
  0%   { background-position: 0 0; }
  100% { background-position: -200% 0; }
}

.root-grid {
    --local-cols: 8;
    --local-rows: 8;
    width: 100%;
    height: 100vh;
    padding: var(--padding-container);
  }

*[class*="col-"] { grid-column: span var(--item-cols); }
*[class*="row-"] { grid-row: span var(--item-rows); }

.col-1, .col-1 + .col-fill, .col-fill:has(+ .col-1) { --item-cols: 1; }
.col-2, .col-2 + .col-fill, .col-fill:has(+ .col-2) { --item-cols: 2; }
.col-3, .col-3 + .col-fill, .col-fill:has(+ .col-3) { --item-cols: 3; }
.col-4, .col-4 + .col-fill, .col-fill:has(+ .col-4) { --item-cols: 4; }
.col-5, .col-5 + .col-fill, .col-fill:has(+ .col-5) { --item-cols: 5; }
.col-6, .col-6 + .col-fill, .col-fill:has(+ .col-6) { --item-cols: 6; }

.row-1, .row-1 + .row-fill, .row-fill:has(+ .row-1) { --item-rows: 1; }
.row-2, .row-2 + .row-fill, .row-fill:has(+ .row-2) { --item-rows: 2; }
.row-3, .row-3 + .row-fill, .row-fill:has(+ .row-3) { --item-rows: 3; }
.row-4, .row-4 + .row-fill, .row-fill:has(+ .row-4) { --item-rows: 4; }

.root-grid {
    --local-cols: 8;
    --local-rows: 8;
    display: grid;
    grid-template-columns: repeat(var(--local-cols), 1fr);
    grid-template-rows: repeat(var(--local-rows), 1fr);
    gap: var(--gap-grid);
}

.subgrid {
    display: grid;
    grid-template-columns: subgrid;
    grid-template-rows: subgrid;
    grid-column: span var(--local-cols);
    grid-row: span var(--local-rows);
    gap: var(--gap-grid);

    &.col-1 { --local-cols: 1; }
    &.col-2 { --local-cols: 2; }
    &.col-3 { --local-cols: 3; }
    &.col-4 { --local-cols: 4; }
    &.col-5 { --local-cols: 5; }
    &.col-6 { --local-cols: 6; }

    &.row-1 { --local-rows: 1; }
    &.row-2 { --local-rows: 2; }
    &.row-3 { --local-rows: 3; }
    &.row-4 { --local-rows: 4; }
    &.row-5 { --local-rows: 5; }
    &.row-6 { --local-rows: 6; }
}
.col-full { grid-column: span var(--local-cols); }
.row-full { grid-row: span var(--local-rows); }

.col-fill { grid-column: span calc(var(--local-cols) - var(--item-cols)); }
.row-fill { grid-row: span calc(var(--local-rows) - var(--item-rows)); }
.col-fill:only-child { --item-cols: 0; }
.row-fill:only-child { --item-rows: 0; }


.flex {
    display: flex;
    gap: var(--space-200);

    &.vertical { flex-direction: column; }

    &.center { 
        justify-content: center;
        &.vertical {
            justify-content: unset;
            align-items: center;
        }
    }
    &.center-y {
        align-items: center;
        &.vertical {
            align-items: unset;
            justify-content: center;
        }
    }
    &.end {
        justify-content: flex-end;
        &.vertical {
            justify-content: unset;
            align-items: flex-end;
        }
    }
    &.end-y {
        align-items: flex-end;
        &.vertical {
            align-items: unset;
            justify-content: flex-end;
        }
    }
    &.between { justify-content: space-between; }
    &.baseline { align-items: flex-end; }
    &.gap-large { gap: var(--space-300); }
    &.gap-small { gap: var(--space-150); }
    &.gap-xsmall { gap: var(--space-050); }
    &.gap-none { gap: 0; }

    .grow {
        flex-grow: 1;
    }

}

.fill-x {
    width: 100%;
}

.fill-y {
    height: 100%;
}

div[class*="grid-"] {
    display: grid;
    gap: var(--gap-grid);

    &.grid-cols-half {
        grid-template-columns: repeat(2, 1fr);

        img:first-child {
            padding-bottom: 0;
        }
    }

    &.grid-rows-half {
        grid-template-rows: repeat(2, 1fr);
    }
    
    &.grid-rows-4 {
        grid-template-rows: repeat(4, 1fr);
    }
}


.offset-col-half {
    margin-left: calc(100% / (var(--item-cols) * 2) - var(--gap-grid-x) / 2);
}

.offset-col-half-right {
    margin-right: calc(100% / (var(--item-cols) * 2) - var(--gap-grid-x) / 2);
}

.offset-row-gap-none {
    margin-top: calc(-1 * var(--gap-grid));
}

.spacer {
    width: 100%;
    height: 100%;
}

.hidden {
    display: none !important;
}
/* ... */

